# winks

./: .gitignore  LICENSE  README.md  ancs.py  entry.py  pyproject.toml  winks.spec
.github/workflows/: release.yml
src/winks/: cli.py  listener.py  platform.py  protocol.py
tests/: test_protocol.py
