[build-system]
requires = ["uv_build>=0.7,<0.8"]
build-backend = "uv_build"

[project]
name = "winks"
version = "0.1.0"
description = "iPhone notifications on Windows via ANCS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.22",
    "winotify>=1.1",
    "pystray>=0.19",
    "Pillow>=10.0",
    "click>=8.1",
    "pydantic>=2.0",
    "platformdirs>=4.0",
]

[project.scripts]
winks = "winks.cli:cli"

[project.urls]
Repository = "https://github.com/OWNER/winks"
Issues = "https://github.com/OWNER/winks/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pyinstaller>=6.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["winks"]
